--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
-# For Notebook (building the stuff)
-pdfplumber
-langchain
-sentence_transformers
-faiss-cpu
-
-# For Gradio App (showing off the stuff)
-faiss-cpu
-gradio
-sentence-transformers
-python-dotenv
-google-generativeai
+pdfplumber==0.11.6
+langchain==0.3.25
+langchain-core==0.3.62
+langchain-text-splitters==0.3.8
+sentence-transformers==4.1.0
+faiss-cpu==1.11.0
+gradio==5.31.0
+gradio_client==1.10.1
+python-dotenv==1.1.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.0rc1
+google-api-python-client==2.170.0
+google-auth==2.40.2
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
